--- a/app/src/main/res/layout/artist_fragment.xml
+++ b/app/src/main/res/layout/artist_fragment.xml
@@ -3,11 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.ArtistFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+
+    <hiennguyen.me.circleseekbar.CircleSeekBar
+        android:id="@+id/csb_artist_popularity"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="10dp"
+        android:padding="64dp"
+        app:csb_arcColor="@color/grey"
+        app:csb_arcWidth="6dp"
+        app:csb_thumbDrawable="@drawable/ic_outline_star_24"
+        app:csb_max="1000"
+        app:csb_min="10"
+        app:csb_progress="300"
+        app:csb_progressColor="@color/purple_700"
+        app:csb_progressWidth="12dp"
+        app:csb_step="5"
+        app:csb_textColor="@color/black"
+        app:csb_textSize="36sp"
+        app:csb_thumbSize="36dp"
+        android:layout_gravity="center"
+        />
 
 </FrameLayout>
