--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -12,110 +12,127 @@
         android:layout_height="100dp"
         android:layout_marginVertical="4dp"
         android:layout_marginHorizontal="16dp"
-        app:cardBackgroundColor="@color/cardview_notification_background"
+        app:cardBackgroundColor="@color/cardBackgroundColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <View
-                android:id="@+id/v_indicator_status_notification"
-                android:layout_width="2dp"
+            <ImageView
+                android:id="@+id/iv_artist_image"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:background="@color/status_pending"
+                android:contentDescription="@string/description_artist_image"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_enterprise_notification"
+                android:id="@+id/tv_artist_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text="Bancolombia – Créditos Hipotecaeeeeeeeeeeeeeeeeeeeeeeeeeeee"
-                android:textAppearance="@style/title_text_unread"
-                app:layout_constraintBottom_toTopOf="@id/tv_title_notification"
-                app:layout_constraintEnd_toEndOf="@id/tv_title_notification"
-                app:layout_constraintStart_toEndOf="@id/v_indicator_status_notification"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_title_notification"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text="Cita médica - medicina generaleeeeeeeeeeeeeeeeeeeeeeeeeeee"
-                android:textAppearance="@style/title_text_unread"
-                app:layout_constraintBottom_toBottomOf="@id/v_indicator_status_notification"
-                app:layout_constraintEnd_toEndOf="@+id/tv_enterprise_notification"
-                app:layout_constraintStart_toEndOf="@id/v_indicator_status_notification"
-                app:layout_constraintTop_toBottomOf="@id/tv_title_notification" />
-
-            <TextView
-                android:id="@+id/tv_content_notification"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text="Estimado por medio de la presente le envia dddddddddddddddddddddddddddd"
-                android:textAppearance="@style/content_text"
-                app:layout_constraintEnd_toEndOf="@+id/tv_enterprise_notification"
-                app:layout_constraintStart_toEndOf="@id/v_indicator_status_notification"
-                app:layout_constraintTop_toBottomOf="@id/tv_title_notification" />
-
-
-            <TextView
-                android:id="@+id/tv_time_notification"
-                android:layout_width="58dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:gravity="end|right"
-                android:text="10:56 am"
-                android:textAppearance="@style/time_notification"
-                app:layout_constraintBottom_toBottomOf="@id/tv_enterprise_notification"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/tv_enterprise_notification"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/value_dummy_tv_artist_name"
+                android:textAppearance="@style/title_text"
+                app:layout_constraintEnd_toStartOf="@id/tv_title_artist_followers"
+                app:layout_constraintStart_toEndOf="@id/iv_artist_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/iv_status"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="20dp"
-                app:layout_constraintBottom_toBottomOf="@id/tv_title_notification"
-                app:layout_constraintEnd_toEndOf="@id/tv_time_notification"
-                app:layout_constraintTop_toTopOf="@id/tv_title_notification" />
+            <TextView
+                android:id="@+id/tv_title_artist_popularity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/text_tv_title_artist_popularity"
+                android:textAppearance="@style/subtitle_text"
+                app:layout_constraintStart_toEndOf="@id/iv_artist_image"
+                app:layout_constraintTop_toBottomOf="@id/tv_artist_name"
+                />
 
-            <ImageView
-                android:id="@+id/iv_attached"
-                android:layout_width="20dp"
-                android:layout_height="11dp"
-                android:layout_marginStart="20dp"
-                android:background="@drawable/ic_attach_file"
-                app:layout_constraintBottom_toBottomOf="@id/tv_content_notification"
-                app:layout_constraintEnd_toEndOf="@id/tv_time_notification"
-                app:layout_constraintTop_toTopOf="@id/tv_content_notification" />
+            <!--<TextView
+                android:id="@+id/tv_artist_popularity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="100"
+                android:textAppearance="@style/subtitle_text_2"
+                app:layout_constraintStart_toEndOf="@id/tv_title_artist_popularity"
+                app:layout_constraintTop_toTopOf="@id/tv_title_artist_popularity"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_title_artist_popularity"/>
+-->
+            <hiennguyen.me.circleseekbar.CircleSeekBar
+                android:id="@+id/csb_artist_popularity"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:padding="4dp"
+                app:csb_arcColor="@color/grey"
+                app:csb_arcWidth="4dp"
+                app:csb_thumbDrawable="@drawable/ic_outline_star_24"
+                app:csb_max="100"
+                app:csb_min="0"
+                app:csb_progress="30"
+                app:csb_progressColor="@color/purple_700"
+                app:csb_progressWidth="4dp"
+                app:csb_step="5"
+                app:csb_textColor="@color/black"
+                app:csb_textSize="10sp"
+                app:csb_thumbSize="10dp"
+                app:layout_constraintStart_toEndOf="@id/tv_title_artist_popularity"
+                app:layout_constraintTop_toTopOf="@id/tv_title_artist_popularity"
+                />
+
+            <TextView
+                android:id="@+id/tv_title_artist_followers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/title_followers"
+                android:textAppearance="@style/subtitle_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_artist_name"
+                app:layout_constraintTop_toTopOf="@id/tv_artist_name"
+                tools:ignore="RtlHardcoded" />
+
+            <TextView
+                android:id="@+id/tv_artist_followers"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/tv_artist_followers_dummy"
+                android:textAppearance="@style/subtitle_text_2"
+                app:layout_constraintEnd_toEndOf="@id/tv_title_artist_followers"
+                app:layout_constraintStart_toStartOf="@id/tv_title_artist_followers"
+                app:layout_constraintTop_toTopOf="@id/tv_title_artist_popularity"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_title_artist_popularity"
+                tools:ignore="RtlHardcoded" />
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
