--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,46 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
+    <style name="title_text">
+        <item name="android:textSize">
+            16sp
+        </item>
+
+        <item name="android:textStyle">
+            bold
+        </item>
+
+        <item name="android:textColor">
+            @color/black
+        </item>
+    </style>
+
+    <style name="subtitle_text">
+        <item name="android:textSize">
+            12sp
+        </item>
+
+        <item name="android:textStyle">
+            bold
+        </item>
+
+        <item name="android:textColor">
+            @color/grey
+        </item>
+    </style>
+
+    <style name="subtitle_text_2">
+        <item name="android:textSize">
+            10sp
+        </item>
+
+        <item name="android:textStyle">
+            bold
+        </item>
+
+        <item name="android:textColor">
+            @color/grey
+        </item>
+    </style>
+
 </resources>
