CG 20220122 re design item card artist

--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -47,7 +47,7 @@
                 android:singleLine="true"
                 android:text="@string/value_dummy_tv_artist_name"
                 android:textAppearance="@style/title_text"
-                app:layout_constraintEnd_toStartOf="@id/tv_title_artist_followers"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_artist_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -86,19 +86,21 @@
                 android:id="@+id/csb_artist_popularity"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:padding="4dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="8dp"
+                android:padding="8dp"
                 app:csb_arcColor="@color/grey"
                 app:csb_arcWidth="4dp"
                 app:csb_thumbDrawable="@drawable/ic_outline_star_24"
                 app:csb_max="100"
                 app:csb_min="0"
-                app:csb_progress="30"
+                app:csb_progress="50"
                 app:csb_progressColor="@color/purple_700"
                 app:csb_progressWidth="4dp"
                 app:csb_step="5"
                 app:csb_textColor="@color/black"
-                app:csb_textSize="10sp"
-                app:csb_thumbSize="10dp"
+                app:csb_textSize="9sp"
+                app:csb_thumbSize="12dp"
                 app:layout_constraintStart_toEndOf="@id/tv_title_artist_popularity"
                 app:layout_constraintTop_toTopOf="@id/tv_title_artist_popularity"
                 />
@@ -111,25 +113,26 @@
                 android:layout_marginEnd="8dp"
                 android:text="@string/title_followers"
                 android:textAppearance="@style/subtitle_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/tv_artist_name"
-                app:layout_constraintTop_toTopOf="@id/tv_artist_name"
+                app:layout_constraintStart_toEndOf="@id/csb_artist_popularity"
+                app:layout_constraintTop_toTopOf="@id/tv_title_artist_popularity"
                 tools:ignore="RtlHardcoded" />
 
             <TextView
                 android:id="@+id/tv_artist_followers"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:text="@string/tv_artist_followers_dummy"
                 android:textAppearance="@style/subtitle_text_2"
-                app:layout_constraintEnd_toEndOf="@id/tv_title_artist_followers"
-                app:layout_constraintStart_toStartOf="@id/tv_title_artist_followers"
+                app:layout_constraintStart_toEndOf="@id/tv_title_artist_followers"
                 app:layout_constraintTop_toTopOf="@id/tv_title_artist_popularity"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_title_artist_popularity"
+                app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="RtlHardcoded" />
 
 
