--- a/app/src/main/res/layout/album_list_item_vairant.xml
+++ b/app/src/main/res/layout/album_list_item_vairant.xml
@@ -8,7 +8,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="4dp"
         android:layout_marginHorizontal="16dp"
@@ -22,12 +22,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/iv_album_image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:contentDescription="@string/description_album_image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -41,29 +41,32 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
-                android:gravity="center_vertical"
                 android:maxLines="1"
                 android:singleLine="true"
+                android:textAlignment="center"
+                android:theme="@style/title_text_about"
                 android:text="@string/value_dummy_tv_album_name"
-                android:textAppearance="@style/title_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/iv_album_image"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:ignore="RtlCompat" />
 
 
             <!--TODO: CG 20220122 ADD RECYCLERVIEW COUNTRIES-->
-<!--            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_country_list"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:visibility="visible"
-                tools:itemCount="10"
-                tools:listitem="@layout/album_list_item"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_artist_image"
-                app:layout_constraintEnd_toEndOf="parent"
-                />-->
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_country_list"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:visibility="visible"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:orientation="horizontal"
+                            tools:itemCount="10"
+                            tools:listitem="@layout/album_list_item"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
