--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -9,10 +9,10 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginVertical="4dp"
         android:layout_marginHorizontal="16dp"
-        app:cardBackgroundColor="@color/cardBackgroundColor"
+        app:cardBackgroundColor="@color/artist_card_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,15 +27,14 @@
             <ImageView
                 android:id="@+id/iv_artist_image"
                 android:layout_width="100dp"
-                android:layout_height="match_parent"
+                android:layout_height="100dp"
                 android:contentDescription="@string/description_artist_image"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_artist_name"
+                android:id="@+id/tv_album_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
@@ -64,7 +63,7 @@
                 android:text="@string/text_tv_title_artist_popularity"
                 android:textAppearance="@style/subtitle_text"
                 app:layout_constraintStart_toEndOf="@id/iv_artist_image"
-                app:layout_constraintTop_toBottomOf="@id/tv_artist_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_album_name"
                 />
 
             <!--<TextView
@@ -135,6 +134,22 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="RtlHardcoded" />
 
+            <!--TODO: CG 20220122 ADD RECYCLERVIEW ALBUM-->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_album_list"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:visibility="visible"
+                tools:itemCount="10"
+                tools:listitem="@layout/album_list_item_vairant"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_artist_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
 
 
 
