--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black_transparent">#80000000</color>
     <color name="grey">#AFAFAF</color>
-    <color name="cardBackgroundColor">#CEF5FA</color>
+    <color name="artist_card_background_color">#CEF5FA</color>
+    <color name="album_card_background_color">#DDFACE</color>
 </resources>
