--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,38 @@
         </item>
     </style>
 
+    <style name="title_text_about">
+        <item name="android:textSize">
+            16sp
+        </item>
+
+        <item name="android:textStyle">
+            bold
+        </item>
+
+        <item name="android:textColor">
+            @color/white
+        </item>
+        <item name="android:background">
+            @color/black_transparent
+        </item>
+    </style>
+
+    <style name="subtitle_text_about">
+        <item name="android:textSize">
+            12sp
+        </item>
+
+        <item name="android:textStyle">
+            bold
+        </item>
+
+        <item name="android:textColor">
+            @color/grey
+        </item>
+        <item name="android:background">
+            @color/black_transparent
+        </item>
+    </style>
+
 </resources>
