--- a/app/src/main/res/layout/album_list_item_variant.xml
+++ b/app/src/main/res/layout/album_list_item_variant.xml
@@ -37,9 +37,6 @@
                 android:id="@+id/tv_album_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:singleLine="true"
@@ -60,9 +57,11 @@
                             android:layout_marginTop="8dp"
                             android:visibility="visible"
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            app:spanCount="5"
+                            android:orientation="horizontal"
                             tools:orientation="horizontal"
-                            tools:itemCount="10"
-                            tools:listitem="@layout/album_list_item"
+                            tools:itemCount="5"
+                            tools:listitem="@layout/country_list_item"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
