generate environment empty error loading data ok

--- a/app/src/main/res/layout/album_list_item_variant.xml
+++ b/app/src/main/res/layout/album_list_item_variant.xml
@@ -34,7 +34,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_album_name"
+                android:id="@+id/tv_artist_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
