--- a/app/src/main/res/layout/album_list_item.xml
+++ b/app/src/main/res/layout/album_list_item.xml
@@ -34,7 +34,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_album_name"
+                android:id="@+id/tv_artist_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
@@ -64,7 +64,7 @@
                 tools:listitem="@layout/country_list_item"
                 android:orientation="horizontal"
                 tools:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/tv_album_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_artist_name"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_album_image"
