--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -8,6 +8,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_artist_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="4dp"
@@ -34,7 +35,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_album_name"
+                android:id="@+id/tv_artist_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
@@ -61,8 +62,8 @@
                 android:singleLine="true"
                 android:text="@string/title_followers"
                 android:textAppearance="@style/subtitle_text_2"
-                app:layout_constraintTop_toBottomOf="@id/tv_album_name"
-                app:layout_constraintStart_toStartOf="@id/tv_album_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_artist_name"
+                app:layout_constraintStart_toStartOf="@id/tv_artist_name"
                 app:layout_constraintEnd_toStartOf="@+id/tv_title_artist_popularity"
                 tools:ignore="RtlHardcoded" />
 
@@ -92,9 +93,9 @@
                 android:singleLine="true"
                 android:text="@string/text_tv_title_artist_popularity"
                 android:textAppearance="@style/subtitle_text_2"
-                app:layout_constraintTop_toBottomOf="@id/tv_album_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_artist_name"
                 app:layout_constraintStart_toEndOf="@id/tv_title_artist_followers"
-                app:layout_constraintEnd_toEndOf="@id/tv_album_name"
+                app:layout_constraintEnd_toEndOf="@id/tv_artist_name"
                 />
 
             <!--<TextView
@@ -131,7 +132,7 @@
                 app:csb_thumbSize="18dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_title_artist_popularity"
                 app:layout_constraintStart_toEndOf="@id/tv_artist_followers"
-                app:layout_constraintEnd_toEndOf="@id/tv_album_name"
+                app:layout_constraintEnd_toEndOf="@id/tv_artist_name"
                 app:layout_constraintBottom_toTopOf="@+id/rv_album_list"
                 />
 
