--- a/app/src/main/res/layout/album_list_item_variant.xml
+++ b/app/src/main/res/layout/album_list_item_variant.xml
@@ -8,6 +8,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_album_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="4dp"
@@ -34,7 +35,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tv_artist_name"
+                android:id="@+id/tv_album_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
