--- a/app/src/main/res/layout/artist_fragment.xml
+++ b/app/src/main/res/layout/artist_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,26 +8,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.ArtistFragment">
 
-
-    <hiennguyen.me.circleseekbar.CircleSeekBar
-        android:id="@+id/csb_artist_popularity"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="10dp"
-        android:padding="64dp"
-        app:csb_arcColor="@color/grey"
-        app:csb_arcWidth="6dp"
-        app:csb_thumbDrawable="@drawable/ic_outline_star_24"
-        app:csb_max="1000"
-        app:csb_min="10"
-        app:csb_progress="300"
-        app:csb_progressColor="@color/purple_700"
-        app:csb_progressWidth="12dp"
-        app:csb_step="5"
-        app:csb_textColor="@color/black"
-        app:csb_textSize="36sp"
-        app:csb_thumbSize="36dp"
-        android:layout_gravity="center"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/sv_search_notification"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:iconifiedByDefault="true"
+        app:queryBackground="@android:color/transparent"
+        android:queryBackground="@android:color/transparent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
-</FrameLayout>
+    <include
+        android:id="@+id/layout_empty_state"
+        layout = "@layout/empty_state_layout"
+        android:visibility="gone"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sv_search_notification"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_artist_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:visibility="visible"
+        tools:itemCount="10"
+        tools:listitem="@layout/artist_list_item"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sv_search_notification"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
