--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="myToolbarTheme">
-        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlNormal">@color/grey</item>
     </style>
 
     <style name="title_text">
