--- a/app/src/main/res/layout/artist_fragment.xml
+++ b/app/src/main/res/layout/artist_fragment.xml
@@ -46,9 +46,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_artist_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:visibility="visible"
+        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
