--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/fragment_background"
     tools:context=".view.LoginFragment">
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/cpi_loading"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:indicatorColor="@color/purple_200"
+        app:strokeWidth="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
     <TextView
         android:id="@+id/tv_autorized_text"
@@ -13,7 +28,12 @@
         android:layout_marginTop="300dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Para utilizar la aplicacion es necesario que autorice la misma con Spotify"
+        android:layout_marginHorizontal="30dp"
+        android:padding="16dp"
+        android:textAlignment="center"
+        style="@style/title_text"
+        android:justificationMode="inter_word"
+        android:text="@string/msg_renew_token"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,8 +45,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:text="Autorizar"
+        android:layout_margin="30dp"
+        android:padding="16dp"
+        android:text="@string/title_btn_authorize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_autorized_text"
@@ -37,8 +58,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:text="Limpiar Cache"
+        android:layout_margin="30dp"
+        android:padding="16dp"
+        android:text="@string/title_btn_clear_cache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_authorize"
